# its_cdktf_base

./: README.md  azure-pipelines.yml  cdktf.json  pyproject.toml
its_cdktf_base/app/: remote_app.py
its_cdktf_base/compute/: avd_stack.py  server_stack.py
its_cdktf_base/network/: cisco_vmx_stack.py  network_stack.py
its_cdktf_base/storage/: storage_share_stack.py
